Changelog for zest.releaser
===========================

3.17 (unreleased)
-----------------

- Nothing changed yet.


3.16 (2010-11-15)
-----------------

- For (pypi) output, also show the first few lines instead of only the
  last few.
  [maurits]

- See if pypirc or setup.cfg has a [zest.releaser] section with option
  release = yes/no.  During the release stage, this influences the
  default answer when asked if you want to make a checkout of the tag.
  The default when not set, is 'yes'.  You may want to set this to
  'no' if most of the time you only make releaser of internal packages
  for customers and only need the tag.
  [maurits]

- Specify bazaar (bzr) tag numbers using the 'tag' revision specifier
  (like 'tag:0.1') instead of only the tag number (0.1) to add
  compatibility with earlier bzr versions (tested with 2.0.2).
  [maurits]


3.15 (2010-09-10)
-----------------

- Read pypi config not only from the .pypirc file, but also from the
  setup.cfg file of the package.  Patch by Erico Andrei.
  [maurits]


3.14 (2010-08-26)
-----------------

- experimental support for git svn tagging, fully test-covered
  [chaoflow]

- fail if no tag was created, not test-covered
  [chaoflow]

- svn available_tags method: intercept 'Repository moved' note in svn
  info and stop processing then.
  [maurits]


3.13 (2010-08-16)
-----------------

- Fixed check that tested whether a package was already available on
  pypi, as the pypi implementation changed slightly.  We now just
  check for a 404 status.  Patch by Wolfgang Schnerring.
  [maurits]


3.12 (2010-07-22)
-----------------

- Added extra entry point for the release step: ``after_checkout``.
  When this is run, the middle entry point has been handled, the tag
  has been made, a checkout of that tag has been made and we are now
  in that checkout directory.  Idea: Jan-Wijbrand Kolman.
  [maurits]

- Fix: in the zest.releaser.releaser.after entry point data, pass the